[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mpr"
description = "Wrapper for MicroPython mpremote tool"
readme = "README.md"
authors = [
  {name = "Mark Blakeney", email = "mark.blakeney@bullet-systems.net"},
]
requires-python = ">=3.6"
keywords = ["micropython", "mpremote", "webrepl", "ampy", "rshell",
  "mpfshell", "upyloader", "upydev", "thonny"]
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "importlib-metadata; python_version < '3.8'",
]

[project.urls]
Homepage = "https://github.com/bulletmark/mpr"

[project.scripts]
mpr = "mpr:main"

[project.license]
text = "GPLv3"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.mypy]
implicit_optional = true
warn_no_return = false
allow_untyped_globals = true
allow_redefinition = true
ignore_missing_imports = true

[tool.edit-lint]
linters = [
  "ruff",
  "flake8",
  "mypy",
  "pyright",
]

# vim:se sw=2:
